Fixed some bug (the players was invisible) + add info about the game for each player

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -9,3 +9,8 @@
 
 canvas{
   display:inline-block;}
+
+#infos{
+  background-color: aquamarine;
+  position: absolute;
+}
